Add enhanced support for automatic rpm relocation
Changes included in this mod are:

automake/pedigree.am
	Change install permissions to 755 so that pedigree files can be
	rewritten after path relocation is performed on them.

configure.ac
	Add AM_PATH_PYTHON so that ldms.d/ldmsd can properly set up PYTHONPATH,
	so that sourcing the daemon's ldmsd.env.local file sets up all
	environment variables needed in order to use python programs in a
	relocated environment.

	Add gender-related files and relocation-related files to
	OVIS_EXEC_SCRIPTS so that the linux paths get expanded.  I used
	OVIS_EXEC_SCRIPTS instead of AC_CONFIG_FILES because SuSE SLES12
	OBS-build rpmlint complains if scripts with a shebang line in them
	are not executable.

ldms/configure.ac
ldms/src/Makefile.am
lib/configure.ac
lib/src/Makefile.am
	ovis-ldms-configvars.sh and ovis-lib-configvars.sh path expansion
	doesn't work correctly using autoconf unless every referenced path is
	fully specified on the ./configure statement, and that is not possible
	in the case of relocatable binaries.  Switched to automake pathname
	expansion, which does full expansion, and works for this case.

lib/src/ovis_auth/Makefile.am
	Make ovis-auth.sh mode be 0755 at installation so that SuSE SLES12
	OBS-build rpmlint doesn't complain about the file having a shebang but
	not being executable.

util/relocation/Makefile.am
util/relocation/bld_manifest.sh.in
util/relocation/relocate-paths.sh.in
util/relocation/target_locations
	Add new script to build a manifest of all files needing path relocation
	at rpm installation time.

	Add the script that performs the relocation using the manifest as input
	during rpm installation.

util/sample_init_scripts/genders/man/ldmsd-genders.man
	Remove documentation for LDMS_BUILDTYPE and LDMS_PREFIX, they are no
	longer used.

util/sample_init_scripts/genders/systemd/Makefile.am
	Change EXTRA_DIST to instead reference the .in files.  Is there a
	reason to ship ldms-manpatch.sh anymore?  T

--- a/Makefile.am
+++ b/Makefile.am
@@ -11,6 +11,8 @@ m4/Ovis-top.m4 \
 SHA.txt \
 TAG.txt
 
+DISTCLEANFILES = ovis-all-config.h
+
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@
 # dist_doc_DATA = README.txt
 
