--- a/lib/src/Makefile.am
+++ b/lib/src/Makefile.am
@@ -1,5 +1,17 @@
 nobase_include_HEADERS = ovis-test/test.h ovis-lib-config.h
-EXTRADIST=ovis-lib-configvars.sh.in
+EXTRA_DIST=ovis-lib-configvars.sh.in
+CLEANFILES = ovis-lib-configvars.sh
+DISTCLEANFILES = $(nobase_include_HEADERS)
+
+do_subst = sed \
+	-e 's,[@]prefix[@],$(prefix),g' \
+	-e 's,[@]exec_prefix[@],$(exec_prefix),g' \
+	-e 's,[@]libdir[@],$(libdir),g' \
+	-e 's,[@]pkglibdir[@],$(pkglibdir),g'
+
+%.sh: %.sh.in
+	$(do_subst) < $< > $@
+	chmod 755 $@
 
 SUBDIRS = third
 
@@ -31,7 +43,9 @@ if ENABLE_OVIS_EVENT
 SUBDIRS += ovis_event
 endif
 
-install-data-hook:
+install-data-hook: ovis-lib-configvars.sh
 	$(MKDIR_P) $(DESTDIR)$(libdir)
-	sed -i -e 's/{//g' -e 's/}//g' ovis-lib-configvars.sh
-	$(INSTALL) -m 644 ovis-lib-configvars.sh $(DESTDIR)$(libdir)
+	$(INSTALL) -m 755 ovis-lib-configvars.sh $(DESTDIR)$(libdir)
+
+uninstall-hook:
+	rm $(DESTDIR)$(libdir)/ovis-lib-configvars.sh
