--- a/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d/Makefile.am
@@ -1,6 +1,9 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/etc/sysconfig/ldms.d
 
+EXTRA_DIST = ldmsd.in ldms-functions.in
+DISTCLEANFILES = ldmsd ldms-functions
+
 if ENABLE_LIBGENDERS
 SUBDIRS = plugins-conf ClusterGenders ClusterSecrets
 dist_doc_DATA = \
