--- a/util/sample_init_scripts/genders/systemd/services/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/services/Makefile.am
@@ -1,10 +1,21 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd/services
 
+doc_DATA=ldmsd.service ldmsd@.service README.ldmsd
+
+EXTRA_DIST = ldmsd.service.in ldmsd@.service.in
+
+do_subst = sed \
+	-e 's,[@]localstatedir[@],$(localstatedir),g' \
+	-e 's,[@]bindir[@],$(bindir),g'
+
+ldmsd.service: ldmsd.service.in
+	$(do_subst) < $< > $@
+
+ldmsd@.service: ldmsd@.service.in
+	$(do_subst) < $< > $@
+
 if ENABLE_LIBGENDERS
-dist_doc_DATA = \
-README.ldmsd \
-ldmsd.service \
-ldmsd@.service
+dist_doc_DATA = README.ldmsd
 endif
 
