--- a/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
+++ b/util/sample_init_scripts/genders/sysv/etc/init.d/Makefile.am
@@ -1,6 +1,9 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/sysv/etc/init.d
 
+EXTRA_DIST = ldmsd.in ldmsd.template.in
+DISTCLEANFILES = ldmsd ldmsd.template
+
 if ENABLE_LIBGENDERS
 dist_doc_DATA = \
 README \
