--- a/util/sample_init_scripts/genders/systemd/Makefile.am
+++ b/util/sample_init_scripts/genders/systemd/Makefile.am
@@ -1,6 +1,7 @@
 
 docdir = $(datadir)/doc/@PACKAGE@-@VERSION@/sample_init_scripts/genders/systemd
-EXTRA_DIST = ldmsd-pre-systemd  ldmsd-wrapper.sh ldms-manpatch.sh
+EXTRA_DIST = ldmsd-pre-systemd.in ldmsd-wrapper.sh.in ldms-manpatch.sh
+DISTCLEANFILES = ldmsd-pre-systemd ldmsd-wrapper.sh
 bin_SCRIPTS=
 if ENABLE_LIBGENDERS
 SUBDIRS = etc services
