Add support for concurrent ldmsd configuration clients
The GUI requires that multiple concurrent configuration clients
are supported by ldmsd. Without this support a user of ldmsd_controller
can hang the GUI as well as other ldmsd_controller useres.

In addition to supporting multiple configuration clients, this
change refactors the configuration logic such that all configuration
command processing is handled by a single function regardless of
whether it came from a file, an inet socket, a unix socket, or a
configuration file.

There is no configuration handling of configuration strings directly.
Instead there is a function that converts configuration strings to
ldmsd_cfg_req_t messages which are then passed along to the
configuration logic.

There is no way to pass configuration strings over the network.
Network clients must format ldmsd_req_hdr_t messages.

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,4 +1,5 @@
-sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
+#sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
+sbin_PROGRAMS = ldmsd ldms_ls
 if ENABLE_SOS
 sbin_PROGRAMS += ldmsd_sos_init
 endif
