--- a/ldms/src/sampler/aries_mmr/Makefile.am
+++ b/ldms/src/sampler/aries_mmr/Makefile.am
@@ -16,14 +16,14 @@ libaries_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
 libaries_mmr_la_SOURCES = aries_mmr.c
 libaries_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcdlocal
 libaries_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
-                                  @LDFLAGS_GETTIME@ -lcoll
+				  @LDFLAGS_GETTIME@ -lcoll
 pkglib_LTLIBRARIES += libaries_mmr.la
 
 libaries_nic_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
 libaries_nic_mmr_la_SOURCES = aries_nic_mmr.c
 libaries_nic_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcdlocal
 libaries_nic_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
-                                  @LDFLAGS_GETTIME@ -lcoll
+				  @LDFLAGS_GETTIME@ -lcoll
 pkglib_LTLIBRARIES += libaries_nic_mmr.la
 
 
@@ -31,9 +31,19 @@ libaries_rtr_mmr_la_CFLAGS = $(AM_CFLAGS) -I$(ARIES_LIBGPCD_INCDIR)
 libaries_rtr_mmr_la_SOURCES = aries_rtr_mmr.c
 libaries_rtr_mmr_la_LDFLAGS = $(AM_LDFLAGS) -L@ARIES_LIBGPCD_LIBDIR@ -lgpcdlocal
 libaries_rtr_mmr_la_LIBADD = $(CORE)/libldms.la -lovis_util \
-                                  @LDFLAGS_GETTIME@ -lcoll
+				  @LDFLAGS_GETTIME@ -lcoll
 pkglib_LTLIBRARIES += libaries_rtr_mmr.la
 
+endif
 
 
+# Can make linkstatus w/o craysystem sampler and w/o aries_mmr and vice versa.
+# Switching to the new naming convention where cray specific items are prefixed with cray
+# Putting it here for arrangement purposes
+if ENABLE_ARIES_LINKSTATUS
+libaries_linkstatus_la_SOURCES = aries_linkstatus.c
+libaries_linkstatus_la_CFLAGS = $(AM_CFLAGS)
+libaries_linkstatus_la_LDFLAGS = $(AM_LDFLAGS)
+libaries_linkstatus_la_LIBADD = $(COMMON_LIBADD)
+pkglib_LTLIBRARIES += libaries_linkstatus.la
 endif
