--- a/lib/src/ovis_event/Makefile.am
+++ b/lib/src/ovis_event/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES =
 bin_PROGRAMS =
 
-AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)
+AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir) -I..
 
 if ENABLE_OVIS_EVENT
 libovis_event_la_SOURCES = ovis_event.c ovis_event.h ovis_event_priv.h
