--- a/lib/src/zap/Makefile.am
+++ b/lib/src/zap/Makefile.am
@@ -17,6 +17,7 @@ SUBDIRS += test
 endif
 
 AM_CPPFLAGS = -DPLUGINDIR='"$(pkglibdir)"'
+AM_CFLAGS = -I..
 libzap_la_SOURCES = zap.c zap_priv.h
 libzap_la_LIBADD = -ldl -lpthread
 libzapincludedir = $(includedir)/zap
