--- a/lib/src/zap/test/Makefile.am
+++ b/lib/src/zap/test/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 sbin_PROGRAMS = zap_test
-AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)/src -I$(top_srcdir)
+AM_CFLAGS = -I$(srcdir)/../ -I$(top_srcdir)/src -I$(top_srcdir) -I../..
 
 zap_test_SOURCES = zap_test.c
 zap_test_LDADD = $(builddir)/../libzap.la -lpthread -ldl
