--- a/ldms/src/sampler/hadoop/Makefile.am
+++ b/ldms/src/sampler/hadoop/Makefile.am
@@ -1,7 +1,7 @@
 lib_LTLIBRARIES =
 
 CORE = ../../core
-AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I../.. @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
 
 #hadoop sampler core
