--- a/ldms/src/sampler/llnl/Makefile.am
+++ b/ldms/src/sampler/llnl/Makefile.am
@@ -3,7 +3,7 @@ dist_man7_MANS=
 
 CORE = ../../core
 SAMPLER= ../../sampler
-AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
+AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) -I../.. @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 # common libadd for llnl samplers
