--- a/ldms/swig/Makefile.am
+++ b/ldms/swig/Makefile.am
@@ -11,7 +11,7 @@ pkgpyexec_LTLIBRARIES = _ldms.la
 _ldms_la_SOURCES = $(SWIG_SOURCES)
 nodist__ldms_la_SOURCES = ldms.c
 _ldms_la_CFLAGS = -g $(SWIG_PYTHON_CPPFLAGS) -I$(top_srcdir)/src/core \
-		 @OVIS_LIB_INCDIR_FLAG@
+		 -I../src @OVIS_LIB_INCDIR_FLAG@
 _ldms_la_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@  $(PYTHON_LDFLAGS) -module
 _ldms_la_LIBADD = $(top_builddir)/src/core/libldms.la -lpthread
 
